# aruco_functionalities

./: .gitignore
aruco_markers/: CMakeLists.txt  README.md  build_tests.sh  dummy_calibration_values.txt
aruco_markers/src/: aruco_detector.cpp  camera_calibration.cpp  markers_generator.cpp  pose_estimation_cube.cpp
aruco_pose_estimation/: CMakeLists.txt  README.md  package.xml
aruco_pose_estimation/config/: aruco_estimator.yaml
aruco_pose_estimation/launch/: aruco_estimator_launch.py
aruco_pose_estimation/src/: marker_pose_corrector.cpp  visual_pose_estimator.cpp
markers_cluster_gz/: README.md  package.xml  setup.cfg  setup.py
markers_cluster_gz/config/: markers_cluster.yaml  markers_cluster_template.yaml
markers_cluster_gz/launch/: markers_cluster.launch.py
markers_cluster_gz/markers_cluster_gz/: marker_spawner.py
markers_cluster_gz/models/marker/: model.sdf
markers_cluster_gz/models/marker/materials/scripts/: aruco_marker.material
